# tokn

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: rust.yml
.sqlx/: query-08587f2ea869af81c42d2e298df93e825490c013c0b5a297a8d5ed4ccdc03dd1.json  query-2c07d57b069b9a47c19f6fcf7a93d38f3959894b00688c5f09a62783d9f2bb23.json  query-547eecb94d5267fb3ea43189c983e2a8fe5897f86618338b75e724b2ac0a90d6.json  query-5d75e3364258cf3702cdb5014aad5e59960c445e0c939a33569ecf61681993fa.json  query-ad54ea84d03415c078733fe47ab7ff569cf9f4b4bc3aa9c1d39d62b18e0a008e.json  query-e4426b46feeb11bd358b593430ba498861e5ca8bc4234a54de4c41900d9c44c2.json  query-f34bd9d6b8deb04aeddea918348f354ece0fda6b88a9fb008af7faccda42caa9.json
docs/: development-setup.md  jwt-primer.md  sqlx-offline-mode-howto.md
jwt-service/: Cargo.toml  README.md
jwt-service/src/: claims.rs  config.rs  lib.rs  main.rs  redis.rs  redis_client.rs  refresh.rs  revoke.rs  token.rs
jwt-service/src/handlers/: generate.rs  mod.rs  protected.rs  refresh.rs  revoke.rs  validate.rs
oauth2-client/: .env.example  Cargo.toml  README.md
oauth2-client/src/: config.rs  lib.rs  main.rs
oauth2-client/src/handlers/: callback.rs  home.rs  login.rs  mod.rs  profile.rs
oauth2-server/: Cargo.toml  README.md
oauth2-server/examples/: generate_password_hash.rs
oauth2-server/migrations/: 20251226034154_initial_schema.sql  20251226034233_seed_demo_data.sql
oauth2-server/src/: config.rs  database.rs  lib.rs  main.rs
oauth2-server/src/handlers/: authorize.rs  authorize_post.rs  mod.rs  token.rs  userinfo.rs
scripts/: ci-local.sh  dev-setup.sh  shutdown.sh  startup.sh  test-all.sh  test-jwt-service.sh
