[package]
name = "oauth2-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "oauth2-client"
path = "src/main.rs"

[dependencies]
# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true

# OAuth2
oauth2.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Cache
redis.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
dotenvy.workspace = true
uuid.workspace = true

# HTTP client library
reqwest = { version = "0.12", features = ["json"] }
