[package]
name = "oauth2-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "oauth2-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum.workspace = true
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
