[package]
name = "oauth2-server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "oauth2-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true

# OAuth2
oxide-auth.workspace = true
oxide-auth-axum.workspace = true

# Database
sqlx.workspace = true

# Cache
redis.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Security
argon2.workspace = true
rand.workspace = true

# Utilities
dotenvy.workspace = true
chrono.workspace = true
uuid.workspace = true
